@@ -196,6 +196,13 @@ FolderNode.popupMenu.New.Label=New Folder
 FolderNode.popupMenu.Update.Label=Get New Messages
 FolderNode.popupMenu.Edit.Label=Edit Properties
 
+CachingFolderNode.popupMenu.Open.Label=Open Folder
+CachingFolderNode.popupMenu.Reconnect.Label=Reconnect to Folder
+CachingFolderNode.popupMenu.Close.Label=Close Folder
+CachingFolderNode.popupMenu.New.Label=New Folder
+CachingFolderNode.popupMenu.Update.Label=Get New Messages
+CachingFolderNode.popupMenu.Edit.Label=Edit Properties
+
 StoreNode.popupMenu.Open.Label=Open Store
 StoreNode.popupMenu.Close.Label=Close Store
 StoreNode.popupMenu.Subscribe.Label=Subscribe Folders
